# CMake-examples

multiple-args-function/: CMakeLists.txt  README.md
version-from-file/: CMakeLists.txt  README.md  VERSION  version.h.in
version-from-file/src/: main.cpp
